// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api shoots should create a shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "newShoot",
        "namespace": "garden-foo",
        "uid": "garden-foo--newShoot",
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "newPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
    },
  ],
]
`;

exports[`api shoots should create a shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "foo@example.org",
    },
    "name": "newShoot",
    "namespace": "garden-foo",
    "resourceVersion": "42",
    "uid": 21,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "newPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--newShoot",
  },
}
`;

exports[`api shoots should delete a shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "confirmation.gardener.cloud/deletion": "true",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should delete a shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "confirmation.gardener.cloud/deletion": "true",
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should not return shoot seed info when seed.spec.secretRef missing 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/dummyShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api shoots should not return shoot seed info when seed.spec.secretRef missing 2`] = `Object {}`;

exports[`api shoots should patch annotations 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "foo": "bar",
        },
      },
    },
  ],
]
`;

exports[`api shoots should patch annotations 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "foo": "bar",
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace addons 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "addons": Array [
          Object {
            "testAddon": Object {
              "enabled": true,
              "foo": "bar",
            },
          },
        ],
      },
    },
  ],
]
`;

exports[`api shoots should replace addons 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "addons": Array [
      Object {
        "testAddon": Object {
          "enabled": true,
          "foo": "bar",
        },
      },
    ],
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace control plane high availablility 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "controlPlane": Object {
          "highAvailability": Object {
            "failureTolerance": Object {
              "type": "node",
            },
          },
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace control plane high availablility 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "controlPlane": Object {
      "highAvailability": Object {
        "failureTolerance": Object {
          "type": "node",
        },
      },
    },
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace dns 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "dns": Object {
          "domain": "foo.bar",
          "providers": Array [
            Object {
              "primary": "true",
              "secretName": "foo-secret",
              "type": "foo-provider",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace dns 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "dns": Object {
      "domain": "foo.bar",
      "providers": Array [
        Object {
          "primary": "true",
          "secretName": "foo-secret",
          "type": "foo-provider",
        },
      ],
    },
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace hibernation enabled 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "hibernation": Object {
          "enabled": true,
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace hibernation enabled 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": true,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace hibernation schedules 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "hibernation": Object {
          "schedules": Array [
            Object {
              "end": "00 08 * * 1,2,3,4,5,6",
              "start": "00 17 * * 1,2,3,4,5,6",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace hibernation schedules 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
      "schedules": Array [
        Object {
          "end": "00 08 * * 1,2,3,4,5,6",
          "start": "00 17 * * 1,2,3,4,5,6",
        },
      ],
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace purpose 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "purpose": "testing",
      },
    },
  ],
]
`;

exports[`api shoots should replace purpose 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "testing",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": undefined,
      "kind": undefined,
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "baz@example.org",
        },
        "labels": Object {
          "foo": "bar",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "technicalID": "shoot--foo--barShoot",
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "baz@example.org",
    },
    "labels": Object {
      "foo": "bar",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot kubernetes enableStaticTokenKubeconfig 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/spec/kubernetes/enableStaticTokenKubeconfig",
        "value": true,
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot kubernetes enableStaticTokenKubeconfig 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "enableStaticTokenKubeconfig": true,
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot kubernetes version 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/spec/kubernetes/version",
        "value": "1.17.1",
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot kubernetes version 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.17.1",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot maintenance data 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "maintenance": Object {
          "autoUpdate": Object {
            "kubernetesVersion": true,
            "machineImageVersion": undefined,
          },
          "timeWindow": Object {
            "begin": "230000+0000",
            "end": "000000+0000",
          },
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot maintenance data 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "maintenance": Object {
      "autoUpdate": Object {
        "kubernetesVersion": true,
      },
      "timeWindow": Object {
        "begin": "230000+0000",
        "end": "000000+0000",
      },
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot seedname 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot/binding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/spec/seedName",
        "value": "foo-new-seed",
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot seedname 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "foo-new-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot workers 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "provider": Object {
          "network": Object {
            "zones": Array [
              Object {
                "workers": "10.250.0.0/20",
              },
            ],
          },
          "workers": Array [
            Object {
              "name": "worker-g5rk1",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot workers 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "network": Object {
        "zones": Array [
          Object {
            "workers": "10.250.0.0/20",
          },
        ],
      },
      "type": "fooInfra",
      "workers": Array [
        Object {
          "name": "worker-g5rk1",
        },
      ],
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should return a shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return a shoot 2`] = `
Object {
  "metadata": Object {
    "annotations": Object {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": Object {
    "cloudProfileName": "infra1-profileName",
    "hibernation": Object {
      "enabled": false,
    },
    "kubernetes": Object {
      "version": "1.16.0",
    },
    "provider": Object {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": Object {
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should return shoot info 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/barShoot.kubeconfig",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden/shoots/infra1-seed",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/barShoot.monitoring",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api shoots should return shoot info 2`] = `
Object {
  "canLinkToSeed": false,
  "cluster_password": "pass-foo-barShoot",
  "cluster_username": "user-foo-barShoot",
  "dashboardUrlPath": "/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/",
  "kubeconfig": "apiVersion: v1
kind: Config
current-context: shoot--foo--barShoot
contexts:
  - name: shoot--foo--barShoot
    context:
      cluster: shoot--foo--barShoot
      user: shoot--foo--barShoot
clusters:
  - name: shoot--foo--barShoot
    cluster:
      server: https://api.barShoot.foo.shoot.cluster
      certificate-authority-data: Y2VydGlmaWNhdGUtYXV0aG9yaXR5LWRhdGE=
users:
  - name: shoot--foo--barShoot
    user:
      client-certificate-data: Y2xpZW50LWNlcnRpZmljYXRlLWRhdGE=
      client-key-data: Y2xpZW50LWtleS1kYXRh
",
  "monitoringPassword": "pass-garden-foo-barShoot.monitoring",
  "monitoringUsername": "user-garden-foo-barShoot.monitoring",
  "seedShootIngressDomain": "foo--barShoot.ingress.foo-east.infra1.example.org",
  "serverUrl": "https://api.barShoot.foo.shoot.cluster",
}
`;

exports[`api shoots should return shoot seed info when need to fallback to old monitoring secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden/secrets/seedsecret-infra1-seed",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
  ],
  Array [
    Object {
      ":authority": "api.foo-east.infra1.seed.cluster",
      ":method": "get",
      ":path": "/api/v1/namespaces/shoot--foo--barShoot/secrets?labelSelector=name%3Dobservability-ingress%2Cmanaged-by%3Dsecrets-manager%2Cmanager-identity%3Dgardenlet",
      ":scheme": "https",
    },
  ],
  Array [
    Object {
      ":authority": "api.foo-east.infra1.seed.cluster",
      ":method": "get",
      ":path": "/api/v1/namespaces/shoot--foo--barShoot/secrets/monitoring-ingress-credentials",
      ":scheme": "https",
    },
  ],
]
`;

exports[`api shoots should return shoot seed info when need to fallback to old monitoring secret 2`] = `
Object {
  "monitoringPassword": "pass-shoot--foo--barShoot-monitoring-ingress-credentials",
  "monitoringUsername": "user-shoot--foo--barShoot-monitoring-ingress-credentials",
}
`;

exports[`api shoots should return shoot seed info when no fallback is needed 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden/secrets/seedsecret-infra1-seed",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
  ],
  Array [
    Object {
      ":authority": "api.foo-east.infra1.seed.cluster",
      ":method": "get",
      ":path": "/api/v1/namespaces/shoot--foo--barShoot/secrets?labelSelector=name%3Dobservability-ingress%2Cmanaged-by%3Dsecrets-manager%2Cmanager-identity%3Dgardenlet",
      ":scheme": "https",
    },
  ],
]
`;

exports[`api shoots should return shoot seed info when no fallback is needed 2`] = `
Object {
  "monitoringPassword": "pass-shoot--foo--barShoot-bar.monitoring",
  "monitoringUsername": "user-shoot--foo--barShoot-bar.monitoring",
}
`;

exports[`api shoots should return three shoots 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return three shoots 2`] = `
Object {
  "items": Array [
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": Object {
        "technicalID": "shoot--foo--barShoot",
      },
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": Object {
        "cloudProfileName": "infra1-profileName",
        "hibernation": Object {
          "enabled": false,
        },
        "kubernetes": Object {
          "version": "1.16.0",
        },
        "provider": Object {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra4-seed-without-secretRef",
      },
      "status": Object {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
}
`;
